# practice

./: .gitignore  LICENSE  README.md
bash/: .gvimrc
bash/.vim/: .VimballRecord  .netrwhist  filetype.vim
cpp/: CMakeLists.txt  README  ut
cpp/include/: docsim.h  heap.h  util.h
cpp/src/: add.cpp  docsim.cpp  heap.cpp
cpp/tests/: CMakeLists.txt  test_add.cpp  test_docsim.cpp  test_heap.cpp
mk/: Makefile  README  traj.cpp
outco/: node.js  sumtree.js
philip/: leetlist  leetlist.cat  problem  problem-help
py/: contact.py  heap.py  heron.py  leet1195.py  leet69.py  mmult1.py  mmult2.py  strange.py
rust/: .gitignore  fix-cursor-extensions.sh
rust/bash/.vim/bundle/ctrlp.vim/: .netrwhist
rust/bash/.vim/ftdetect/: clojure.vim
rust/bash/.vim/syntax/: scheme.vim  tex.vim
rust/evcount/: Cargo.toml
rust/evcount/src/: main.rs
rust/fibo/src/: main.rs
rust/guess/: Cargo.toml
rust/guess/src/: main.rs
rust/interview/src/: main.rs
rust/minigrep/: .gitignore
rust/minigrep/src/: lib.rs  main  main.rs
rust/twelve-days/: Cargo.toml
rust/twelve-days/src/: main.rs
rust/wc/: Cargo.toml  main.rs
settings/: .vimrc  settings.json  zshrc-macos
settings/.vim/doc/: tags
sql/: a.py  mk_cust  mk_emp
